--- a/test.html
+++ b/test.html
@@ -1,7 +1,18 @@
-<h1> hello</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1> hello</h1>
 <h3>anew line</h3>
 <h5>this is for m4 commit </h5>
 
 <h6>this is from b2 branch </h6>
 <h6>this is from b2 branch </h6>
 <h4> hhh </h4>
+</body>
+</html>
